--- a/PracticaAPI/pages/index2.html
+++ b/PracticaAPI/pages/index2.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <a href="../index.html"><img class="imgvolver" src="../images/descarga.png" alt=""></a>
+    <span id="p"></span>
     <div class="div">
         <div class="titulo">
             <h1>Adivina el País</h1>
